# OptimizedAgent

./: .gitignore  CLAUDE.md  README.md  app.py  config.xml  development_guide.md  iter_backtestsys.py  main.py  pyproject.toml  staged_calibration.config.xml
config/: config.json  framework_config.json  hyperparams_config.json  iteratee_config.json
doc/: todo-roadmap.md
docs/: backtestsys-delay-equal-user-guide.md  backtestsys-hyperparameter-user-guide.md  config-guide.md  config_guide.md  development-guide.md  impl-plan-result-via-filesystem.md  migration-target-resolver.md  protocol-filesystem-data-exchange.md  protocol-result-via-filesystem.md  staged-calibration-config-guide.md  user-manual-hyperparameter-tuning.md
docs/adr/: 0001-target-spec-boundary.md  0002-target-resolver-architecture.md
mock_backtestsys/: contracts.xml  market_data.csv  market_data_ds_01.csv  market_data_ds_02.csv  market_data_ds_03.csv  replay_cancels.csv  replay_orders.csv
mock_backtestsys/groundtruth/: PubExecutionDetailLog_m1_20260312_TEST_CONTRACT.csv  PubOrderDoneInfoLog_m1_20260312_TEST_CONTRACT.csv
src/optimization_control_plane/: iteratee_runner.py
tests/: conftest.py
tests/e2e/: test_follower_fanout.py  test_random_sampler.py  test_tpe_sampler.py
tests/fixtures/: blackboxes.py
tools/backtestsys-visualizer/: README.md  pyproject.toml
tools/backtestsys-visualizer/backtestsys_visualizer/: __init__.py  __main__.py  charts.py  cli.py  loader.py  models.py  run_gt_analysis.py  run_gt_metrics.py  run_gt_param_binding.py  run_gt_resolver.py  streamlit_app.py
(+141 files in other folders)
