[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optimization-control-plane"
version = "1.0.0"
description = "Optimization control plane framework – V1 single-objective"
requires-python = ">=3.10"
dependencies = [
    "optuna",
    "structlog",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-timeout",
    "mypy",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
